WC-655. Web Console. Fix modal footer alignment.

--- a/modules/web-console/frontend/app/primitives/modal/index.scss
+++ b/modules/web-console/frontend/app/primitives/modal/index.scss
@@ -122,7 +122,7 @@
         opacity: 1;
         background: none;
         color: $gray-light;
-        
+
         [ignite-icon] {
             height: 12px;
         }
@@ -227,6 +227,10 @@
         &:last-child {
             flex: 1;
             justify-content: flex-end;
+
+            &.modal-footer--no-grow {
+                flex-grow: 0;
+            }
         }
     }
 }
